PARTICIPANTS: use this file for creating the class diagram in mastery task 01
@startuml

class GetBookActivity {
    -catalogDao : CatalogDao
    -recommendationServiceClient : RecommendationsServiceClient
    +execute(request : GetBookRequest) : GetBookResponse
}

class GetPublishingStatusActivity {
    -publishingStatusDao : PublishingStatusDao
    +execute(publishingStatusRequest : GetPublishingStatusRequest) : GetPublishingStatusResponse
}

class RemoveBookFromCatalogActivity {
   -catalogDao : CatalogDao
   +execute(removeBookFromCatalogRequest : RemoveBookFromCatalogRequest) : RemoveBookFromCatalogResponse
}

class SubmitBookForPublishingActivity {
    -publishingStatusDao : PublishStatusDao
    -catalogDao : CatalogDao
    -manager : BookPublishRequestManager
    +execute(request : SubmitBookForPublishingRequest) : SubmitBookForPublishingResponse
}

class RecommendationsServiceClient {
    -recommendationsService : RecommendationService
    +getBookRecommendations(genre : BookGenre) : List<BookRecommnedation>
}

class CatalogDao {
    -dynamoDbMapper : DynamoDBMapper
    +getBookFromCatalog(bookId : String) : CatalogItemVersion
    -getLatestVersionOfBook(bookId : String) : CatalogItemVersion
    +validateBookExists(bookId : String) : void
}

class PublishingStatusDao {
    -ADDITIONAL_NOTES_PREFIX = " Additional Notes: " : String
    -dynamoDbMapper : DynamoDBMapper
    +setPublishingStatus(publishingRecordId : String,
    publishingRecordStatus : PublishingRecordStatus, bookId : String) : PublishingStatusItem
    +setPublishingStatus(publishingRecordId : String,
    publishingRecordStatus : PublishingRecordStatus, bookId : String, message : String) : PublishingStatusItem
    +getPublishStatusList(publishingRecordId : String) : List<PublishingStatusItem>
}

class CatalogItemVersion {
    -@DynamoDBHashKey bookId : String
    -@DynamoDBRangeKey version : int
    -inactive : boolean
    -title : String
    -author : String
    -text : String
    -genre : BookGenre
}

class PublishingStatusItem {
    -@DynamoDBHashKey publishingRecordId : String
    -@DynamoDBRangeKey status : PublishingRecordStatus
    -statusMessage : String
    -bookId : String
}

class BookPublishRequestManager {
    -queue : Queue<BookPublishRequest>
    +addBookPublishRequest(request : BookPublishRequest) : void
    +getBookPublishRequestToProcess() : BookPublishRequest
}

class BookNotFoundException

class PublishingStatusNotFoundException

GetBookActivity o-- CatalogDao
GetBookActivity o-- RecommendationsServiceClient
SubmitBookForPublishingActivity o-- PublishingStatusDao
SubmitBookForPublishingActivity o-- CatalogDao
SubmitBookForPublishingActivity o-- BookPublishRequestManager
GetPublishingStatusActivity o-- PublishingStatusDao

CatalogItemVersion o-- CatalogDao
PublishingStatusItem o-- PublishingStatusDao
CatalogDao o-- BookNotFoundException
PublishingStatusDao o-- PublishingStatusNotFoundException


@enduml
